DeleteUser method
