# internal/routes/router.go
@@ -33,18 +33,13 @@ func Setup() *gin.Engine {
 	user := router.Group("/api")
 	{
 		user.POST("user", api.CreateUser)
-		user.DELETE("user/:id", nil)
-
-		user.POST("/authorize/email/challenge/:code", nil)
 		user.POST("/authorize", api.AuthorizeUser)
-	}
+		user.POST("/authorize/email/challenge/:code", nil)
 
-	authUser := router.Group("/api")
-	{
-		user.GET("user/:id", api.GetUser)
-		user.PATCH("user", api.UpdateUser)
+		user.GET("user/:id", api.GetUser).Use(middlewares.JWT())
+		user.PATCH("user", api.UpdateUser).Use(middlewares.JWT())
+		user.DELETE("user/:id", api.DeleteUser).Use(middlewares.JWT())
 	}
-	authUser.Use(middlewares.JWT())
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
